# godot-console

./: .all-contributorsrc  .editorconfig  .gitattributes  .gitignore  .npmrc  LICENSE.md  Makefile  README.md  gven.json  package.json  plugin.cfg  plugin.gd  pnpm-lock.yaml  pnpm-workspace.yaml  project.godot
.github/: FUNDING.yml
Console/: BaseCommands.gd  BaseMessages.gd  Callback.gd  Console.gd  Console.tscn  History.gd  IConsole.gd  Log.gd  README.md  RegExLib.gd
demo/: icon.webp.import  project.godot  reference.json  scene.gd  scene.tscn
demo-csharp/: CSharpDemoScene.cs  CSharpDemoScene.tscn  Demo-csharp.csproj  Demo-csharp.sln  addons  project.godot
docs/: BaseCommands.md  Console.md  History.md  Log.md  Registering-Command-Old.md  Types.md
example/: project.godot  scene.tscn  script.gd
gdscript-docs-maker/: CHANGELOG.md  LICENSE  Makefile  README.md  generate_reference  generate_reference.bat  setup.cfg
gdscript-docs-maker/gdscript_docs_maker/: __main__.py
gdscript-docs-maker/gdscript_docs_maker/modules/: command_line.py  config.py  convert_to_markdown.py  gdscript_objects.py  hugo.py  make_markdown.py  merge_json.py  utils.py
gdscript-docs-maker/gdscript_docs_maker/modules/data/: hugo_front_matter.toml
gdscript-docs-maker/godot-scripts/: Collector.gd  README.md  ReferenceCollector.gd  ReferenceCollectorCLI.gd
godot/: .gutconfig.json  project.godot  reference.json
scenes/: test.tscn
scripts/: custom_register_script.gd
src/: BaseCommands.gd  Callback.gd  Commands.gd  Console.gd  Console.tscn  ConsoleLine.gd  History.gd  IConsole.gd  Log.gd  (+2 more)
(+300 files in other folders)
