[metadata]
name = gdscript_docs_maker
version = 1.3.0
description = Create documentation and class references from your Godot GDScript code.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = godot, gdscript, documentation, reference, godotengine
url = https://github.com/GDQuest/gdscript-docs-maker
author = Nathan Lovato
author_email = nathan@gdquest.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir=
    =gdscript_docs_maker
packages = find:
include_package_data = True
python_requires = >=3.7
entry_points = file: gdscript_docs_maker.__main__:main

[options.packages.find]
where=gdscript_docs_maker

[mypy]
mypy_path = ./gdscript_docs_maker
